#15 add item feature
