# api/docs/swagger.json
@@ -515,8 +515,50 @@
               "$ref": "#/definitions/Item"
             }
           },
+          "403": {
+            "description": "El usuario no pertenece al grupo",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "El usuario no pertenece a este grupo"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "404": {
+            "description": "Grupo no encontrado",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Grupo no encontrado"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Error interno del servidor",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Error al crear el ítem"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           }
         },
         "security": [
@@ -534,6 +576,10 @@
                   "name": {
                     "type": "string",
                     "example": "Pan"
+                  },
+                  "quantity": {
+                    "type": "string",
+                    "example": "2 unidades"
                   },
                   "groupId": {
                     "type": "string",
