# api/models/item.js
@@ -2,11 +2,12 @@ import mongoose from 'mongoose';
 
 const ItemSchema = new mongoose.Schema({
   name: { type: String, required: true },
-  quantity: { type: String, default: 1 },
-  isPurchased: { type: Boolean,  },
-  groupId: { type: String, ref: 'Group', required: true },
-  addedBy: { type: String, ref: 'User', required: true },
-  createdAt: { type: Date, default: Date.now }
-}, { timestamps: true });
+  quantity: { type: Number, default: "1" },
+  isPurchased: { type: Boolean, default: false },
+  groupId: { type: mongoose.Schema.Types.ObjectId, ref: 'Group', required: true },
+  addedBy: { type: mongoose.Schema.Types.ObjectId, ref: 'User', required: true }
+}, {
+  timestamps: true
+});
 
 export default mongoose.model('Item', ItemSchema);
